tests/failing/tuple_struct_test.rs
use redbit::*;

#[derive(Entity)]
struct TupleStruct(u32, String);

fn main() {
    // If it compiles successfully, we're good.
}
