tests/failing/tuple_struct_test.stderr
error: `#[derive(Entity)]` only supports structs with named columns.
 --> tests/failing/tuple_struct_test.rs:4:1
  |
4 | struct TupleStruct(u32, String);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no function or associated item named `routes` found for struct `TupleStruct` in the current scope
 --> tests/failing/tuple_struct_test.rs:3:10
  |
3 | #[derive(Entity)]
  |          ^^^^^^ function or associated item not found in `TupleStruct`
4 | struct TupleStruct(u32, String);
  | ------------------ function or associated item `routes` not found for this struct
  |
  = note: this error originates in the derive macro `Entity` (in Nightly builds, run with -Z macro-backtrace for more info)
